<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bpradmin.igisubizo.Commissioner">
    <item
        android:id="@+id/Profil"
        android:title="@string/action_profil"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/user_info"/>
    <item
        android:id="@+id/action_lock"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/lock"/>
    <item
        android:id="@+id/balance"
        android:title="@string/action_balance"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Payment"
        android:title="@string/action_payment"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/pay_card"/>
    <item
        android:id="@+id/accounts"
        android:title="@string/action_account"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/help"
        android:title="@string/action_help"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
