<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Profil"
        android:title="@string/action_profil"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/user_info"/>
    <item
        android:id="@+id/Payment"
        android:title="@string/action_profil"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/pay_card"/>
    <item
        android:id="@+id/search"
        android:title="@string/action_login"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView|ifRoom"
        android:icon="@drawable/post_office"
        android:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <!--item
        android:id="@+id/queue"
        android:title="@string/action_profil"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView|ifRoom"
        android:icon="@mipmap/queue"/-->
</menu>