<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:padding="10dp"
    android:id="@+id/lnLayout"
    android:background="@drawable/login_fieldset"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/loginHeader"/>
<!--TextView
    android:id="@+id/tvUname"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/uname"
    style="@style/fonts"
    android:background="@drawable/textviews"
    /-->

    <EditText
        android:id="@+id/edtUname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittexts"
        android:textAlignment="center"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:drawableStart="@mipmap/loguser"
        android:drawableLeft="@mipmap/loguser"
        android:hint="@string/unamehint"
        />
    <!--TextView
        android:id="@+id/tvPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pwd"
        android:background="@drawable/textviews"
        style="@style/fonts"/-->
    <EditText
        android:id="@+id/edtPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@drawable/edittexts"
        android:textAlignment="center"
        android:paddingLeft="5dp"
        android:drawableStart="@mipmap/lock"
        android:drawableLeft="@mipmap/lock"
        android:singleLine="true"
        android:hint="@string/pwd"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/resetLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgpwd"
        android:layout_marginLeft="60dp"
        android:textColor="#000"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btnSave"
        android:text="@string/btnLogin"
        style="@style/btn"
        android:drawableLeft="@mipmap/save"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/fonts"
        android:text="@string/footer"
        android:textColor="#0000f0"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="60dp"
        android:paddingBottom="3dp"
        android:background="@drawable/edittexts"/>
</LinearLayout>