<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="20dp"
    android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingTop="10dp" android:paddingBottom="20dp"
    android:background="@drawable/login_fieldset"
    >
<TextView
    android:id="@+id/changePwd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/fonts"
    android:text="@string/changePwd"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:singleLine="true"
    android:textAlignment="center"/>
    <TextView
        android:id="@+id/tvPwdOld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/fonts"
        android:text="@string/pwdOld"
        android:background="@drawable/textviews"/>
    <EditText
        android:id="@+id/edtPwdOld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true"
        android:paddingLeft="5dp"
        android:drawableStart="@mipmap/lock"
        android:drawableLeft="@mipmap/lock"
        android:background="@drawable/edittexts"/>
    <TextView
        android:id="@+id/tvPwdNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/fonts"
        android:text="@string/pwdNew"
        android:background="@drawable/textviews"/>
    <EditText
        android:id="@+id/edtPwdNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true"
        android:paddingLeft="5dp"
        android:drawableStart="@mipmap/lock"
    android:drawableLeft="@mipmap/lock"
        android:background="@drawable/edittexts"/>
    <TextView
        android:id="@+id/tvPwdConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/fonts"
        android:text="@string/pwdConf"
        android:background="@drawable/textviews"/>
    <EditText
        android:id="@+id/edtPwdConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:drawableStart="@mipmap/lock"
        android:drawableLeft="@mipmap/lock"
        android:background="@drawable/edittexts"/>
    <Button
        android:id="@+id/btnUpdwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnChangePwd"
        android:drawableStart="@mipmap/save"
        android:drawableLeft="@mipmap/save"
        android:background="@drawable/buttons"
        style="@style/btn"
        />

</LinearLayout>