<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bpradmin.igisubizo.index"
    android:paddingRight="30dp" android:paddingLeft="30dp"   >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!-- TODO: Update blank fragment layout -->
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wehelptrackdoc"
        android:textColor="@color/white"
        style="@style/addnew_header"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/fonts"
        android:background="@drawable/recyclerview"
        android:layout_marginTop="20dp"
        android:text="@string/queueContent"
        android:paddingLeft="15dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/fonts"
        android:text="@string/footer"
        android:textColor="#0000f0"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="30dp"
        android:paddingBottom="3dp"
        android:background="@drawable/edittexts"/>
</LinearLayout>
</FrameLayout>
