<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.bpradmin.igisubizo.WithdrawHistory"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView android:text="@string/withdrawrepHeader" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="50dp"/>
        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calView"
            android:background="@color/recyclBg"
            android:headerBackground="@color/btnSave"
            android:touchscreenBlocksFocus="true"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"></DatePicker>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to"/>
        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calViewTo"
            android:background="@color/recyclBg"
            android:headerBackground="@color/btnSave"
            android:touchscreenBlocksFocus="true"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"></DatePicker>
    <TextView android:text="@string/filtercontent" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seldate"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDownload"
        android:background="@drawable/buttons"
        android:text="@string/btndownload"
        android:layout_marginTop="3dp"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/download"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>
